// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Modal /> Snapshots should match the snapshot 1`] = `
.shadow-1 {
  box-shadow: 0 2px 1px -1px var(--qtm-shadow-umbra-color),0 1px 1px 0 var(--qtm-shadow-penumbra-color),0 1px 3px 0 var(--qtm-shadow-ambient-color);
}

.Card-module__card-wrapper___HvjEg {
  background-color: var(--qtm-colors-neutral-0);
  border-radius: 8px;
  display: flex;
  flex-direction: column;
  position: relative;
}

.Content-module__content___itVo9 {
  font-size: calc(var(--qtm-base-font-size)*.875);
  margin: 0;
  padding: var(--qtm-spacing-small) var(--qtm-spacing-medium);
}

.Footer-module__footer-wrapper___fgaA4 {
  padding: 0 var(--qtm-spacing-medium) var(--qtm-spacing-medium);
}

.Header-module__header-wrapper___G5kEL {
  display: flex;
  padding: var(--qtm-spacing-medium) var(--qtm-spacing-medium) 0;
}

.HeaderText-module__header-text___TE5FD {
  flex-basis: 0;
  flex-grow: 1;
}

.Title-module__title___3S2cv {
  font-size: calc(var(--qtm-base-font-size)*1.5);
  font-weight: 600;
  margin: 0;
}

.Modal-module__wrapper___LkDcM {
  align-items: center;
  background-color: rgba(66,66,66,.5);
  bottom: 0;
  display: flex;
  justify-content: center;
  left: 0;
  position: fixed;
  right: 0;
  top: 0;
  z-index: 98;
}

.Modal-module__close-icon___a0f6b {
  position: absolute;
  right: var(--qtm-spacing-medium);
  top: var(--qtm-spacing-small);
}

.ModalContent-module__content___GJGqF {
  font-size: var(--qtm-base-font-size);
  max-height: 70vh;
  overflow-y: auto;
  padding: var(--qtm-spacing-medium);
}

.ModalHeader-module__header___lVyEE {
  padding: var(--qtm-spacing-medium) var(--qtm-spacing-medium) 0;
}

.ModalTitle-module__title___AHcTw {
  font-weight: 700;
  line-height: 1.25;
}

.Button-module__button___AbcpN {
  align-items: center;
  border-radius: 4px;
  box-sizing: border-box;
  cursor: pointer;
  display: flex;
  font-weight: 700;
  justify-content: center;
  transition: all .2s ease-in-out;
}

.Button-module__button-default___miWV3 {
  color: var(--qtm-colors-neutral-0);
}

.Button-module__button-default-primary___bURr2 {
  background-color: var(--qtm-colors-primary-700);
  border: 2px solid var(--qtm-colors-primary-700);
}

.Button-module__button-icon___c2VCp {
  pointer-events: none;
}

.Button-module__button-icon-medium___ppo2m,
.Button-module__button-icon-small___m8db9,
.Button-module__button-icon-xsmall___prEKP {
  width: calc(var(--qtm-base-font-size)*1.5);
}

.Button-module__button-medium___qo6Ym,
.Button-module__button-small___HWutw {
  padding: var(--qtm-spacing-xxsmall) var(--qtm-spacing-medium);
}

.Button-module__button-medium___qo6Ym {
  font-size: var(--qtm-base-font-size);
  line-height: calc(var(--qtm-base-font-size)*1.5);
  min-height: var(--qtm-spacing-xxlarge);
}

.Button-module__shadow-2-neutral-500___hxqSk {
  --qtm-shadow-umbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-umbra-opacity));
  --qtm-shadow-penumbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-penumbra-opacity));
  --qtm-shadow-ambient-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-ambient-opacity));
  box-shadow: 0 3px 1px -2px var(--qtm-shadow-umbra-neutral-500-color),0 2px 2px 0 var(--qtm-shadow-penumbra-neutral-500-color),0 1px 5px 0 var(--qtm-shadow-ambient-neutral-500-color);
}

.Button-module__icon-button___gjVoG {
  background-color: transparent;
  border: none;
  border-radius: 50%;
  box-shadow: none;
  color: hsla(0,0%,60%,.5);
  outline: none;
  width: 40px;
}

@media (min-width:0px) {
  .Modal-module__modal-card___h7YdA {
    width: 90%;
  }
}

@media (min-width:600px) {
  .Modal-module__modal-card___h7YdA {
    width: 400px;
  }
}

@media (min-width:1024px) {
  .Modal-module__modal-card___h7YdA {
    width: 600px;
  }
}

@media (min-width:1440px) {
  .Modal-module__modal-card___h7YdA {
    width: 800px;
  }
}

<div
  class="Modal-module__wrapper___LkDcM"
  role="dialog"
>
  <article
    class="Card-module__card-wrapper___HvjEg shadow-1 Modal-module__modal-card___h7YdA"
    tabindex="0"
  >
    <header
      class="Header-module__header-wrapper___G5kEL ModalHeader-module__header___lVyEE"
    >
      <div
        class="HeaderText-module__header-text___TE5FD"
      >
        <h2
          class="Title-module__title___3S2cv ModalTitle-module__title___AHcTw"
        >
          Modal title
        </h2>
      </div>
    </header>
    <div
      class="Content-module__content___itVo9 ModalContent-module__content___GJGqF"
    >
      Modal Content
    </div>
    <footer
      class="Footer-module__footer-wrapper___fgaA4"
    >
      ModalFooter
    </footer>
    <button
      aria-label="close dialog"
      class="Button-module__button___AbcpN Button-module__button-medium___qo6Ym Button-module__button-default___miWV3 Button-module__button-default-primary___bURr2 Button-module__shadow-2-neutral-500___hxqSk Button-module__shadow-4-primary-900___HdA30 Button-module__shadow-4-primary-700___Gs4yK Button-module__shadow-8-primary-900___f0GvH Button-module__icon-button___gjVoG Modal-module__close-icon___a0f6b"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium Button-module__button-icon___c2VCp Button-module__button-icon-medium___ppo2m css-1696fkf-MuiSvgIcon-root"
        data-qtm-preloader="icon"
        data-testid="CloseIcon"
        focusable="false"
        style="font-size: 24px; max-width: 24px;"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
        />
      </svg>
    </button>
  </article>
</div>
`;

exports[`<Modal /> Snapshots should match the snapshot 2`] = `
.shadow-1 {
  box-shadow: 0 2px 1px -1px var(--qtm-shadow-umbra-color),0 1px 1px 0 var(--qtm-shadow-penumbra-color),0 1px 3px 0 var(--qtm-shadow-ambient-color);
}

.Card-module__card-wrapper___HvjEg {
  background-color: var(--qtm-colors-neutral-0);
  border-radius: 8px;
  display: flex;
  flex-direction: column;
  position: relative;
}

.Content-module__content___itVo9 {
  font-size: calc(var(--qtm-base-font-size)*.875);
  margin: 0;
  padding: var(--qtm-spacing-small) var(--qtm-spacing-medium);
}

.Footer-module__footer-wrapper___fgaA4 {
  padding: 0 var(--qtm-spacing-medium) var(--qtm-spacing-medium);
}

.Header-module__header-wrapper___G5kEL {
  display: flex;
  padding: var(--qtm-spacing-medium) var(--qtm-spacing-medium) 0;
}

.HeaderText-module__header-text___TE5FD {
  flex-basis: 0;
  flex-grow: 1;
}

.Title-module__title___3S2cv {
  font-size: calc(var(--qtm-base-font-size)*1.5);
  font-weight: 600;
  margin: 0;
}

.Modal-module__close-icon___a0f6b {
  position: absolute;
  right: var(--qtm-spacing-medium);
  top: var(--qtm-spacing-small);
}

.ModalContent-module__content___GJGqF {
  font-size: var(--qtm-base-font-size);
  max-height: 70vh;
  overflow-y: auto;
  padding: var(--qtm-spacing-medium);
}

.ModalHeader-module__header___lVyEE {
  padding: var(--qtm-spacing-medium) var(--qtm-spacing-medium) 0;
}

.ModalTitle-module__title___AHcTw {
  font-weight: 700;
  line-height: 1.25;
}

.Button-module__button___AbcpN {
  align-items: center;
  border-radius: 4px;
  box-sizing: border-box;
  cursor: pointer;
  display: flex;
  font-weight: 700;
  justify-content: center;
  transition: all .2s ease-in-out;
}

.Button-module__button-default___miWV3 {
  color: var(--qtm-colors-neutral-0);
}

.Button-module__button-default-primary___bURr2 {
  background-color: var(--qtm-colors-primary-700);
  border: 2px solid var(--qtm-colors-primary-700);
}

.Button-module__button-icon___c2VCp {
  pointer-events: none;
}

.Button-module__button-icon-medium___ppo2m,
.Button-module__button-icon-small___m8db9,
.Button-module__button-icon-xsmall___prEKP {
  width: calc(var(--qtm-base-font-size)*1.5);
}

.Button-module__button-medium___qo6Ym,
.Button-module__button-small___HWutw {
  padding: var(--qtm-spacing-xxsmall) var(--qtm-spacing-medium);
}

.Button-module__button-medium___qo6Ym {
  font-size: var(--qtm-base-font-size);
  line-height: calc(var(--qtm-base-font-size)*1.5);
  min-height: var(--qtm-spacing-xxlarge);
}

.Button-module__shadow-2-neutral-500___hxqSk {
  --qtm-shadow-umbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-umbra-opacity));
  --qtm-shadow-penumbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-penumbra-opacity));
  --qtm-shadow-ambient-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-ambient-opacity));
  box-shadow: 0 3px 1px -2px var(--qtm-shadow-umbra-neutral-500-color),0 2px 2px 0 var(--qtm-shadow-penumbra-neutral-500-color),0 1px 5px 0 var(--qtm-shadow-ambient-neutral-500-color);
}

.Button-module__icon-button___gjVoG {
  background-color: transparent;
  border: none;
  border-radius: 50%;
  box-shadow: none;
  color: hsla(0,0%,60%,.5);
  outline: none;
  width: 40px;
}

@media (min-width:0px) {
  .Modal-module__modal-card___h7YdA {
    width: 90%;
  }
}

@media (min-width:600px) {
  .Modal-module__modal-card___h7YdA {
    width: 400px;
  }
}

@media (min-width:1024px) {
  .Modal-module__modal-card___h7YdA {
    width: 600px;
  }
}

@media (min-width:1440px) {
  .Modal-module__modal-card___h7YdA {
    width: 800px;
  }
}

<article
  class="Card-module__card-wrapper___HvjEg shadow-1 Modal-module__modal-card___h7YdA"
  tabindex="0"
>
  <header
    class="Header-module__header-wrapper___G5kEL ModalHeader-module__header___lVyEE"
  >
    <div
      class="HeaderText-module__header-text___TE5FD"
    >
      <h2
        class="Title-module__title___3S2cv ModalTitle-module__title___AHcTw"
      >
        Modal title
      </h2>
    </div>
  </header>
  <div
    class="Content-module__content___itVo9 ModalContent-module__content___GJGqF"
  >
    Modal Content
  </div>
  <footer
    class="Footer-module__footer-wrapper___fgaA4"
  >
    ModalFooter
  </footer>
  <button
    aria-label="close dialog"
    class="Button-module__button___AbcpN Button-module__button-medium___qo6Ym Button-module__button-default___miWV3 Button-module__button-default-primary___bURr2 Button-module__shadow-2-neutral-500___hxqSk Button-module__shadow-4-primary-900___HdA30 Button-module__shadow-4-primary-700___Gs4yK Button-module__shadow-8-primary-900___f0GvH Button-module__icon-button___gjVoG Modal-module__close-icon___a0f6b"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium Button-module__button-icon___c2VCp Button-module__button-icon-medium___ppo2m css-1696fkf-MuiSvgIcon-root"
      data-qtm-preloader="icon"
      data-testid="CloseIcon"
      focusable="false"
      style="font-size: 24px; max-width: 24px;"
      viewBox="0 0 24 24"
    >
      <path
        d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
      />
    </svg>
  </button>
</article>
`;
